assets/main.scss
/* ... */
.jumbotron-backdrop {
    position: absolute;
    z-index: 0;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    opacity: 0.2;
    filter: blur(5px);
    background-position: 50% 50%;
    background-repeat: no-repeat;
    background-size: cover;
}

.jumbotron-container {
    position: relative;
    z-index: 1;
}

.smaller {
    font-size: .75em;
}

.opener-image {
    margin: 0 0 1rem 0;
    width: 100%;
    height: auto;
    border-radius: 6px;

    @include media-breakpoint-up(sm) {
        float: left;
        margin: 0.5em 2em 1em 0;
        max-width: 250px;
    }
}

section {
    margin-bottom: 2rem;
}
article {
    .article-toc {
        font-size: 90%;
        background-color: $gray-100;
        padding: 1rem;

        ul {
            margin-bottom: 0;
        }
    }
    .article-sidebar {
        font-size: 90%;
        background-color: $gray-100;
        margin-top: -1rem;
        padding-bottom: 1rem;

        .sticky-top {
            padding-top: 1rem;
        }

        ul {
            padding-left: 1rem;
            margin-bottom: 0;
        }
        section {
            margin-bottom: 1rem;
        }
    }
}

// Anchors
a {
    transition: all .2s ease-in;

    // Add a dark background on hover to non-image links
    &:not(.btn):not(.image-link):not(.card-link-overlay) {
        &:hover, &:focus {
            background-color: $link-hover-bg;
        }
    }

    // Internal links lead to pages on this same website, they get dashed underlining
    &.internal {
        border-bottom: 1px dashed #5a9681;
    }

    &.wikipedia:after {
        content: "w";
        vertical-align: super;
        padding-left: 2px;
        font-family: serif;
        font-size: 65%;
    }
}

// Buttons
.btn-outline-dark {
    --bs-btn-active-color: #{$primary-accent};
}
#btn-scroll-to-top {
    position: fixed;
    bottom: 30px;
    right: 30px;
    transition: all .5s ease-in-out;
    opacity: 0;
    visibility: hidden;
    z-index: 1030; // Above .sticky-top
    font-size: 2em;

    &.show {
        opacity: 0.9;
        visibility: visible;
    }
}

// Tables
.table {
    thead {
        background-color: $gray-400;
    }
}
.table-narrow {
    width: auto;
}
.table-headless {
    thead {
        display: none;
    }
}
td.number {
    text-align: right;
    white-space: nowrap;
}
td.date {
    white-space: nowrap;
}
.subheading {
    font-size: $h6-font-size;
    font-weight: $font-weight-bold;
    background-color: rgba($black, .09);
}

// Blockquotes
blockquote {
    background-color: $gray-100;
    border-left: 2px solid transparentize($primary, 0.6);
    border-bottom-right-radius: 18px;
    padding: 1rem;

    p:last-child {
        margin: 0;
    }
}

// List groups
.list-group {
    .fa, .fas, .fab {
        margin-right: 1rem;
    }
    .list-group-item-iconized {
        display: flex;
        flex-direction: column;
        align-items: center;

        @include media-breakpoint-up(md) {
            flex-direction: row;
            justify-content: left;
        }
    }
    .list-group-img {
        padding: 1rem 0;

        @include media-breakpoint-up(md) {
            padding: 0.5rem 2rem 0.5rem 0.5rem;
        }
    }
    .list-group-img-64 {
        width: 64px;
        padding: 0.5rem 0;

        @include media-breakpoint-up(md) {
            width: 110px;
            padding: 0.5rem 2rem 0.5rem 0.5rem;
        }

        img {
            width: 64px;
            height: auto;
        }
        .fa, .fas, .fab {
            font-size: 64px;
        }
    }
    .list-group-img-32 {
        width: 32px;
        padding: 0.33rem 0;

        @include media-breakpoint-up(md) {
            width: 64px;
            padding: 0.25rem 1rem 0.25rem 0.52rem;
        }

        img {
            width: 32px;
            height: auto;
        }
        .fa, .fas, .fab {
            font-size: 32px;
        }
    }
    .list-group-text {
        display: flex;
        flex-direction: column;
        justify-content: space-evenly;
        text-align: center;

        @include media-breakpoint-up(md) {
            text-align: initial;
        }
    }
    .list-group-heading {
        font-weight: $font-weight-bold;
        font-size: 110%;
        margin-bottom: 0.25rem;

        @include media-breakpoint-up(md) {
            margin-bottom: initial;
        }
    }
    .list-group-details {
        font-size: 90%;
    }
}

// Cards
.card {
    position: relative;
    box-shadow: 0 0.125rem 0.375rem rgba(50, 50, 93, .08), 0 0.0625rem 0.1875rem rgba(0, 0, 0, .06);

    &.uni-height {
        padding-bottom: 10%;
        height: 95%;

        .card-footer {
            position: absolute;
            width: 100%;
            bottom: 0;
        }
    }

    &:hover, &:focus {
        .top-image img {
            transform: scale(1.1, 1.1);
        }
        .card-link-overlay {
            background-color: rgba(255, 255, 255, 0.35);
        }
    }

    .top-image {
        display: flex;
        flex-shrink: 0;
        justify-content: center;
        align-items: center;
        background-color: #c4c4c4;
        height: 200px;
        overflow: hidden;

        img {
            transition: all 0.2s linear;
            height: 100%;
        }
    }

    .in-image-top-right {
        position: absolute;
        top: 0.5rem;
        right: 0.5rem;
        color: #ffffff;
        text-shadow: 0 0 0.5rem #000000;
        z-index: 19;
    }

    .card-link-overlay {
        position: absolute;
        left: 0;
        top: 0;
        width: 100%;
        height: 100%;
        z-index: 20;
        background-color: rgba(255, 255, 255, 0);
        transition: background-color 0.2s linear;
    }
}
/* ... */

